--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MADEPA PORTIA</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,6 +32,524 @@
         </ul>
       </div>
     </nav>
+
+    <div class="dark--block block--skewed-right grid grid--1x2 body__block">
+      <header class="body__header">
+        <h1 class="body__heading">Cloud hosting for pros</h1>
+        <p class="body__content">Deploy your website in less than 60 seconds</p>
+
+        <a class="btn btn--accent btn--streched body__btn" href="#"
+          >get started</a
+        >
+      </header>
+
+      <picture class="banner">
+        <source
+          type="image/webp"
+          srcset="/images/banner.webp 1x, /images/banner2x.webp 2x"
+        />
+
+        <source
+          type="image/png"
+          srcset="/images/banner.png 1x, /images/banner2x.png 2x"
+        />
+
+        <img src="/images/banner2x.png" alt="banner" />
+      </picture>
+    </div>
+
+    <section class="domain">
+      <header class="domain__header">
+        <h2 class="domain__heading">
+          The best webhosting Starting at per month
+        </h2>
+        <p class="domain__content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          nostrum recusandae adipisci quod quisquam saepe distinctio eveniet
+          cumque, odit laudantium.
+        </p>
+      </header>
+
+      <div class="input__container">
+        <input
+          class="input"
+          type="text"
+          placeholder="Enter domain name here..."
+        />
+        <a class="btn btn--accent" href="#">search</a>
+      </div>
+
+      <ul class="list domain__list">
+        <li class="domain__item">.com $9.26</li>
+        <li class="domain__item">
+          <span class="badge badge--secondary">.sg $7.91</span>
+        </li>
+        <li class="domain__item">.spactze $12.98</li>
+        <li class="domain__item">.info $14.15</li>
+        <li class="domain__item">.net $16.15</li>
+        <li class="domain__item">.xyz $10.15</li>
+      </ul>
+    </section>
+
+    <div>
+      <div class="plan--container">
+        <div class="plan">
+          <header class="card__header">
+            <h3 class="card__heading">Entry</h3>
+            <span class="card__price">$14</span>
+            <span class="card__duration">/month</span>
+            <span class="badge badge--primary-small card__discount"
+              >10% OFF</span
+            >
+            <p class="card__content">Easy start on the cloud</p>
+          </header>
+
+          <ul class="list card__list">
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              Unlimited Websites
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              Unlimited Bandwidth
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              100 GB SSD Storage
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              3 GB RAM
+            </li>
+          </ul>
+
+          <div class="plan__btn">
+            <button class="btn btn--block btn--outline">buy now</button>
+          </div>
+        </div>
+
+        <div class="plan plan--popular">
+          <header class="card__header">
+            <img class="plan__popular-image" src="/images/popular.svg" alt="" />
+            <h3 class="card__heading">Entry</h3>
+            <span class="card__price">$14</span>
+            <span class="card__duration">/month</span>
+            <span class="badge badge--secondary-small card__discount"
+              >10% OFF</span
+            >
+            <p class="card__content">Easy start on the cloud</p>
+          </header>
+
+          <ul class="list card__list">
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              Unlimited Websites
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              Unlimited Bandwidth
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              100 GB SSD Storage
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              3 GB RAM
+            </li>
+          </ul>
+
+          <div class="plan__btn">
+            <button class="btn btn--block btn--plan">buy now</button>
+          </div>
+        </div>
+
+        <div class="plan">
+          <header class="card__header">
+            <h3 class="card__heading">Entry</h3>
+            <span class="card__price">$14</span>
+            <span class="card__duration">/month</span>
+            <span class="badge badge--primary-small card__discount"
+              >10% OFF</span
+            >
+            <p class="card__content">Easy start on the cloud</p>
+          </header>
+
+          <ul class="list card__list">
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              Unlimited Websites
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              Unlimited Bandwidth
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              100 GB SSD Storage
+            </li>
+
+            <li class="card__list-item">
+              <svg class="icon card__icon">
+                <use xlink:href="/images/sprite.svg#tick"></use>
+              </svg>
+              3 GB RAM
+            </li>
+          </ul>
+
+          <div class="plan__btn">
+            <button class="btn btn--block btn--outline">buy now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section>
+      <header class="feature__header">
+        <h2 class="feature__heading">host on the cloud to keep growing</h2>
+        <p class="feature__header-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+          beatae eos deleniti minima facere reprehenderit.
+        </p>
+      </header>
+      <div class="grid grid--1x2 feature__section">
+        <section class="feature__content">
+          <span class="icon-container feature__icon">
+            <svg class="icon icon--secondary">
+              <use xlink:href="/images/sprite.svg#menu"></use>
+            </svg>
+          </span>
+          <h3 class="feature__content-heading">super easy to use</h3>
+          <p class="feature__content-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+            dicta eos perferendis dignissimos tempore provident, quasi ad. Quo,
+            dignissimos recusandae?
+          </p>
+          <a class="feature__link" href="#">learn more</a>
+        </section>
+
+        <picture class="feature__image">
+          <source
+            type="image/webp"
+            srcset="/images/easy@1x.webp 1x, /images/easy@2x.webp 2x"
+          />
+
+          <source
+            type="image/jpg"
+            srcset="/images/easy@1x.jpg 1x, /images/easy@2x.jpg 2x"
+          />
+
+          <img src="/images/easy@2x.jpg" alt="Easy" />
+        </picture>
+      </div>
+    </section>
+
+    <div class="grid grid--1x2 feature__section">
+      <section class="feature__content">
+        <span class="icon-container feature__icon">
+          <svg class="icon icon--secondary">
+            <use xlink:href="/images/sprite.svg#menu"></use>
+          </svg>
+        </span>
+        <h3 class="feature__content-heading">super easy to use</h3>
+        <p class="feature__content-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          dicta eos perferendis dignissimos tempore provident, quasi ad. Quo,
+          dignissimos recusandae?
+        </p>
+        <a class="feature__link" href="#">learn more</a>
+      </section>
+
+      <picture class="feature__image">
+        <source
+          type="image/webp"
+          srcset="/images/fast@1x.webp 1x, /images/fast@2x.webp 2x"
+        />
+
+        <source
+          type="image/jpg"
+          srcset="/images/fast@1x.jpg 1x, /images/fast@2x.jpg 2x"
+        />
+
+        <img src="/images/fast@2x.jpg" alt="fast" />
+      </picture>
+    </div>
+
+    <div class="grid grid--1x2 feature__section">
+      <section class="feature__content">
+        <span class="icon-container feature__icon">
+          <svg class="icon icon--secondary">
+            <use xlink:href="/images/sprite.svg#menu"></use>
+          </svg>
+        </span>
+        <h3 class="feature__content-heading">super easy to use</h3>
+        <p class="feature__content-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          dicta eos perferendis dignissimos tempore provident, quasi ad. Quo,
+          dignissimos recusandae?
+        </p>
+        <a class="feature__link" href="#">learn more</a>
+      </section>
+
+      <picture class="feature__image">
+        <source
+          type="image/webp"
+          srcset="/images/wordpress@1x.webp 1x, /images/wordpress@2x.webp 2x"
+        />
+
+        <source
+          type="image/jpg"
+          srcset="/images/wordpress@1x.jpg 1x, /images/wordpress@2x.jpg 2x"
+        />
+
+        <img src="/images/wordpress@2x.jpg" alt="wordpress" />
+      </picture>
+    </div>
+
+    <div class="grid grid--1x2 feature__section">
+      <section class="feature__content">
+        <span class="icon-container feature__icon">
+          <svg class="icon icon--secondary">
+            <use xlink:href="/images/sprite.svg#menu"></use>
+          </svg>
+        </span>
+        <h3 class="feature__content-heading">super easy to use</h3>
+        <p class="feature__content-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          dicta eos perferendis dignissimos tempore provident, quasi ad. Quo,
+          dignissimos recusandae?
+        </p>
+        <a class="feature__link" href="#">learn more</a>
+      </section>
+
+      <picture class="feature__image">
+        <source
+          type="image/webp"
+          srcset="/images/support@1x.webp 1x, /images/support@2x.webp 2x"
+        />
+
+        <source
+          type="image/jpg"
+          srcset="/images/support@1x.jpg 1x, /images/support@2x.jpg 2x"
+        />
+
+        <img src="/images/support@2x.jpg" alt="support" />
+      </picture>
+    </div>
+
+    <div class="dark--block block--skewed-left block-showcase">
+      <header>
+        <h2 class="showcase__heading">User-Friendly control panel</h2>
+      </header>
+
+      <div class="grid grid--1x2">
+        <img class="showcase__image" src="/images/ipad.png" alt="" />
+
+        <div class="showcase__section">
+          <div class="showcase__container">
+            <svg class="icon icon--primary">
+              <use xlink:href="/images/sprite.svg#wordpress"></use>
+            </svg>
+            <div class="showcase__content">
+              <h3 class="showcase__content-heading">
+                Easy start & managed update
+              </h3>
+              <p class="showcase__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptas architecto quia molestiae quis, quos animi.
+              </p>
+            </div>
+          </div>
+
+          <div class="showcase__container">
+            <svg class="icon icon--primary">
+              <use xlink:href="/images/sprite.svg#wordpress"></use>
+            </svg>
+            <div class="showcase__content">
+              <h3 class="showcase__content-heading">
+                Easy start & managed update
+              </h3>
+              <p class="showcase__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptas architecto quia molestiae quis, quos animi.
+              </p>
+            </div>
+          </div>
+
+          <div class="showcase__container">
+            <svg class="icon icon--primary">
+              <use xlink:href="/images/sprite.svg#wordpress"></use>
+            </svg>
+            <div class="showcase__content">
+              <h3 class="showcase__content-heading">
+                Easy start & managed update
+              </h3>
+              <p class="showcase__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptas architecto quia molestiae quis, quos animi.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="testimonial">
+      <header class="testimonial__header">
+        <h2 class="testimonial__heading">What our Customer are Saying</h2>
+        <p class="testimonial__content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque beatae
+          obcaecati sed consequatur vel aliquam?
+        </p>
+      </header>
+
+      <div class="grid grid--1x2 testimonial__card">
+        <div class="image__container">
+          <img
+            class="testimonial__card-image"
+            src="/images/testimonial.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="testimonial__card-container">
+          <p class="testimonial__card-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur
+            nisi, vero cum animi quasi dolorem porro dolor corrupti et rem?
+            Sapiente odit, obcaecati ad mollitia consequuntur officiis!
+            Voluptatem obcaecati illo beatae corporis dicta reiciendis nemo
+            suscipit officiis ipsum reprehenderit maiores, debitis culpa quis
+            animi accusantium consectetur. Inventore nesciunt corporis quo!
+          </p>
+
+          <div class="testimonial__details">
+            <span
+              ><svg class="icon testimonial__icon">
+                <use xlink:href="/images/sprite.svg#line"></use>
+              </svg>
+            </span>
+
+            <div>
+              <p class="name">ABEL ATUMBEE</p>
+              <p class="company">Mosh Company Ceo</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="dark--block">
+      <div class="media">
+        <div class="collapsible collapsible--expanded media__container">
+          <header class="media__header">
+            <h3 class="media__heading">PRODUCT</h3>
+            <span>
+              <svg class="icon media__icon">
+                <use xlink:href="/images/sprite.svg#chevron"></use>
+              </svg>
+            </span>
+          </header>
+          <ul class="list collapsible__content media__content">
+            <li><a href="">Wordpress Hosting</a></li>
+            <li><a href="">Free Automated Wordpress</a></li>
+            <li><a href="">Migration</a></li>
+            <li><a href="">Domain Names</a></li>
+            <li><a href="">Monthly Web Hosting</a></li>
+          </ul>
+        </div>
+
+        <div class="collapsible media__container">
+          <header class="media__header">
+            <h3 class="media__heading">COMPANY</h3>
+            <span>
+              <svg class="icon media__icon">
+                <use xlink:href="/images/sprite.svg#chevron"></use>
+              </svg>
+            </span>
+          </header>
+          <ul class="list collapsible__content media__content">
+            <li><a href="">About</a></li>
+            <li><a href="">affiliates</a></li>
+            <li><a href="">blog</a></li>
+            <li><a href="">careers</a></li>
+            <li><a href="">community</a></li>
+            <li><a href="">news</a></li>
+            <li><a href="">green hosting</a></li>
+          </ul>
+        </div>
+
+        <div class="collapsible media__container">
+          <header class="media__header">
+            <h3 class="media__heading">support</h3>
+            <span>
+              <svg class="icon media__icon">
+                <use xlink:href="/images/sprite.svg#chevron"></use>
+              </svg>
+            </span>
+          </header>
+          <ul class="list collapsible__content media__content">
+            <li><a href="">contact</a></li>
+            <li><a href="">knowledge</a></li>
+            <li><a href="">forums</a></li>
+            <li><a href="">system status</a></li>
+            <li><a href="">web hosting</a></li>
+            <li><a href="">dream compute</a></li>
+          </ul>
+        </div>
+
+        <div class="collapsible media__container">
+          <header class="media__header">
+            <h3 class="media__heading">Domain</h3>
+            <span>
+              <svg class="icon media__icon">
+                <use xlink:href="/images/sprite.svg#chevron"></use>
+              </svg>
+            </span>
+          </header>
+          <ul class="list collapsible__content media__content">
+            <li><a href="">Domain checker</a></li>
+            <li><a href="">domain transfer</a></li>
+            <li><a href="">free domain</a></li>
+            <li><a href="">XYZ Domain</a></li>
+            <li><a href="">Cheap SSL certificate</a></li>
+          </ul>
+        </div>
+
+        <div class="media__image">
+          <img src="/images/logo.svg" alt="" />
+        </div>
+      </div>
+    </div>
 
     <script src="/js/main.js"></script>
   </body>
