--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
       <div class="grid grid--1x2 feature__section">
         <section class="feature__content">
           <span class="icon-container feature__icon">
-            <svg class="icon icon--secondary">
-              <use xlink:href="/images/sprite.svg#menu"></use>
+            <svg class="icon icon--primary">
+              <use xlink:href="/images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__content-heading">super easy to use</h3>
@@ -281,8 +281,8 @@
     <div class="grid grid--1x2 feature__section">
       <section class="feature__content">
         <span class="icon-container feature__icon">
-          <svg class="icon icon--secondary">
-            <use xlink:href="/images/sprite.svg#menu"></use>
+          <svg class="icon icon--primary">
+            <use xlink:href="/images/sprite.svg#computer"></use>
           </svg>
         </span>
         <h3 class="feature__content-heading">super easy to use</h3>
@@ -312,8 +312,8 @@
     <div class="grid grid--1x2 feature__section">
       <section class="feature__content">
         <span class="icon-container feature__icon">
-          <svg class="icon icon--secondary">
-            <use xlink:href="/images/sprite.svg#menu"></use>
+          <svg class="icon icon--primary">
+            <use xlink:href="/images/sprite.svg#settings"></use>
           </svg>
         </span>
         <h3 class="feature__content-heading">super easy to use</h3>
@@ -343,8 +343,8 @@
     <div class="grid grid--1x2 feature__section">
       <section class="feature__content">
         <span class="icon-container feature__icon">
-          <svg class="icon icon--secondary">
-            <use xlink:href="/images/sprite.svg#menu"></use>
+          <svg class="icon icon--primary">
+            <use xlink:href="/images/sprite.svg#clock"></use>
           </svg>
         </span>
         <h3 class="feature__content-heading">super easy to use</h3>
@@ -382,7 +382,7 @@
         <div class="showcase__section">
           <div class="showcase__container">
             <svg class="icon icon--primary">
-              <use xlink:href="/images/sprite.svg#wordpress"></use>
+              <use xlink:href="/images/sprite.svg#snap"></use>
             </svg>
             <div class="showcase__content">
               <h3 class="showcase__content-heading">
@@ -397,7 +397,7 @@
 
           <div class="showcase__container">
             <svg class="icon icon--primary">
-              <use xlink:href="/images/sprite.svg#wordpress"></use>
+              <use xlink:href="/images/sprite.svg#growth"></use>
             </svg>
             <div class="showcase__content">
               <h3 class="showcase__content-heading">
